Refined "add" section style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <h1>To-Do List</h1>
-        <section>
+        <section class="add">
             <input class="todo" type="text" placeholder="Add a task...">
             <button>Add</button>
         </section>
